2001-09-27  Phil Edwards  <pme@gcc.gnu.org>

	* include/std/*:  Add Doxygen hooks.
	* docs/doxygen/Intro.3:  New file, general intro to the man pages.
	* docs/doxygen/mainpage.doxy:  Formatting tweaks.  List our own links
	rather than using a generated index.
	* docs/doxygen/user.cfg.in:  Disable the index, enable man pages.
	* docs/doxygen/run_doxygen:  Massage the generated man pages, using...
	* docs/doxygen/stdheader.cc:  ...this new file.

2001-09-26  Stan Shebs  <shebs@apple.com>

	* include/Makefile.am: Remove RCS Id strings.
	* src/Makefile.am: Ditto.
	* docs/doxygen/run_doxygen: Ditto.
	* docs/html/configopts.html: Ditto.
	* docs/html/documentation.html: Ditto.
	* docs/html/explanations.html: Ditto.
	* docs/html/install.html: Ditto.
	* docs/html/17_intro/howto.html: Ditto.
	* docs/html/18_support/howto.html: Ditto.
	* docs/html/19_diagnostics/howto.html: Ditto.
	* docs/html/20_util/howto.html: Ditto.
	* docs/html/21_strings/howto.html: Ditto.
	* docs/html/22_locale/howto.html: Ditto.
	* docs/html/23_containers/howto.html: Ditto.
	* docs/html/24_iterators/howto.html: Ditto.
	* docs/html/25_algorithms/howto.html: Ditto.
	* docs/html/26_numerics/howto.html: Ditto.
	* docs/html/27_io/howto.html: Ditto.
	* docs/html/ext/howto.html: Ditto.
	* docs/html/ext/sgiexts.html: Ditto.
	* docs/html/faq/index.html: Ditto.
	* docs/html/faq/index.txt: Ditto.
	
2001-09-25  Phil Edwards  <pme@gcc.gnu.org>

	* testsuite/21_strings/c_strings.cc (test01, test02):  Increase
	`carray' size.

2001-09-25  Phil Edwards  <pme@gcc.gnu.org>

	* docs/html/20_util/howto.html:  Add anchor name.
	* docs/html/23_containers/howto.html:  Line wrapping, another link.
	* docs/html/25_algorithms/howto.html:  Another note.

	* docs/html/ext/howto.html:  Link to SGI extensions.  List DRs and
	link to them...
	* docs/html/ext/lwg-active.html:  ...in this new file (from R19),
	* docs/html/ext/lwg-defects.html:  and this new file (from R19).