@@ -1,3 +1,9 @@
+2001-09-28  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* testsuite/lib/libstdc++-v3-dg.exp (libstdc++-v3-init): Use
+	correct multilib builddir.
+	Properly locate libgcc_s.
+
 2001-09-27  Phil Edwards  <pme@gcc.gnu.org>
 
 	* include/std/*:  Add Doxygen hooks.
